# lyric-for-musicfox

./: .gitignore  CMakeLists.txt  README.MD  musicfox.patch
.github/workflows/: .cmake-multi-platform.yml.kate-swp  arm-linux.yml  cmake-multi-platform.yml
src/: config.h  debug.h  lyricwidget.cpp  lyricwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mpris-lyric-sender.cpp  setting.cpp  setting.h  settingwindow.cpp  settingwindow.h  settingwindow.ui
src/dbus-mode/: lyric.cpp  lyric.h  lyriccontroller.cpp  lyriccontroller.h  lyricnetworkcontroller.cpp  lyricnetworkcontroller.h  mprismetadata.cpp  mprismetadata.h  musicfoxlistener.cpp  musicfoxlistener.h  musicfoxmanager.cpp  musicfoxmanager.h  qtlistener.cpp  qtlistener.h
